After CMF 1.5.2beta1

  Features Added

    - CMFDefault/skins/zpt_generic/talkback_tree:  Add link to allow
      managers to delete replies (http://zope.org/Collectors/38).

  Bugs Fixed

    - CMFCore.WorkflowTool:  Make (deprecated) WorkflowInformation objects
      schema-compatible with current ActionInformation.
      (http://zope.org/Collectors/355)

    - CMFCore.utils.ToolInit: For icon registration to work with ToolInit
      you would have to have the same product_name parameter as the actual
      product name of the product. product_name is now optional, defaulting 
      to the real product name. It is also deprecated, and starting with 
      CMF1.6 product_name it will be ignored.

    - CMFSetup.workflow: scripts were not exported, they're now in a
      'scripts' subdirectory, and encoding was not propagated at import
      time.

  Others

    - CatalogTool: Removed obsolete Vocabulary.

CMF 1.5.2beta1 (2005/06/26)

  New Features

    - CMFDefault browser: Added browser package and five_template.
      This allows to use the main_template for forms generated by Five.

    - CMFDefault skins: Added style_slot to main_template.

    - CMFCore.PortalFolder: A new class PortalFolderBase was added. The
      class is a subclass of Folder while PortalFolder is a subclass of
      PortalFolderBase and OrderedFolder. It was added for software which
      is incompatible w/ the ordered interface.

    - CMFCore.ActionProviderBase: Add the methods _getOAI and _getExprContext
      which can be used to hook in custom version of getOAI() and
      getExprContext().

    - CMFCore.TypesTool.TypeInformation.queryMethodID(): Add new argument
      context=None and change all calls of queryMethodID to apply the context.

    - Interfaces: Added newstyle (Zope 3) interfaces.
      This change has no effect on Zope 2.7 without Five.

    - CMFSetup.skins: Small featurelet that adds a new keyword to the